--- a/Quality/Quality/Areas/FinalInspection/Views/Query/Index.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/Index.cshtml
@@ -207,7 +207,8 @@
             "paging": true,
             "scrollY": "49vh",
             "scrollCollapse": true,
-            "scrollX": true
+            "scrollX": true,
+            "autoWidth": false
 
         });
     });
