--- a/Quality/Quality/Areas/FinalInspection/Views/Shared/_ForAll_Layout.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Shared/_ForAll_Layout.cshtml
@@ -10,6 +10,11 @@
         .col-auto > * {
             width: auto;
         }
+
+        .ui-widget-header {
+            border: red;
+            background: red;
+        }
     </style>
 }
 @RenderSection("FinalInspection_head", required: false)
