--- a/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab4_Layout.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab4_Layout.cshtml
@@ -1,1 +1,48 @@
-﻿
+﻿@model DatabaseObject.ViewModel.FinalInspection.QueryReport
+<style>
+    #myTable4_info {
+        color: white
+    }
+
+    #myTable4_previous, #myTable4_next {
+        color: white !important;
+    }
+
+    #myTable4_wrapper, #myTable4_wrapper > .dataTables_scrollHeadInner {
+        width: 100%
+    }
+</style>
+<h1>Beautiful Product Qty:@Model.FinalInspection.BAQty</h1>
+<table id="myTable4" class="table table-striped display">
+    <thead>
+        <tr class="row-name">
+            <th>Non Beautiful Product</th>
+            <th>Qty</th>
+            <th>Photo</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.ListBACriteriaItem)
+        {
+            <tr class="row-content" style="vertical-align: middle; text-align: center;">
+                <td>@item.BACriteria:@item.BACriteriaDesc</td>
+                <td>@item.Qty</td>
+                <td> <img src="/Image/Icon/Picture.png" width="25" height="25" /></td>
+            </tr>
+        }
+    </tbody>
+</table>
+<script>
+    $(function () {
+        $('#myTable4').DataTable({
+            "pageLength": 10,
+            "autoWidth": false,
+            "info": false,
+            "filter": false,
+            "paging": false,
+            "info": false,
+            "scrollY": "40vh",
+            "scrollCollapse": true,
+        });
+    });
+</script>
