--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Moisture.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Moisture.cshtml
@@ -96,11 +96,11 @@
                     </tr>
                     <tr>
                         <td><label>Top</label></td>
-                        <td>@Html.TextBoxFor(o => o.GarmentTop, new { @type = "number", @onchange= "setColor();", @style = "width:100px" })</td>
+                        <td>@Html.TextBoxFor(o => o.GarmentTop, new { @type = "number", @step = "0.1", @onchange= "setColor();", @style = "width:100px" })</td>
                         <td><label>Middle</label></td>
-                        <td>@Html.TextBoxFor(o => o.GarmentMiddle, new { @type = "number", @onchange = "setColor();", @style = "width:100px" })</td>
+                        <td>@Html.TextBoxFor(o => o.GarmentMiddle, new { @type = "number", @step = "0.1", @onchange = "setColor();", @style = "width:100px" })</td>
                         <td><label>Bottom</label></td>
-                        <td>@Html.TextBoxFor(o => o.GarmentBottom, new { @type = "number", @onchange = "setColor();", @style = "width:100px" })</td>
+                        <td>@Html.TextBoxFor(o => o.GarmentBottom, new { @type = "number", @step = "0.1", @onchange = "setColor();", @style = "width:100px" })</td>
                     </tr>
                     <tr>
                         <td colspan="2"><label>Carton Moisture</label></td>
@@ -108,9 +108,9 @@
                     </tr>
                     <tr>
                         <td><label>Inside</label></td>
-                        <td>@Html.TextBoxFor(o => o.CTNInside, new { @type = "number", @onchange = "setColor();", @style = "width:100px" })</td>
+                        <td>@Html.TextBoxFor(o => o.CTNInside, new { @type = "number", @step = "0.1", @onchange = "setColor();", @style = "width:100px" })</td>
                         <td><label>Outside</label></td>
-                        <td>@Html.TextBoxFor(o => o.CTNOutside, new { @type = "number", @onchange = "setColor();", @style = "width:100px" })</td>
+                        <td>@Html.TextBoxFor(o => o.CTNOutside, new { @type = "number", @step = "0.1", @onchange = "setColor();", @style = "width:100px" })</td>
                         <td colspan="2"></td>
                     </tr>
                 </table>
@@ -516,10 +516,6 @@
         }
 
         function checkSubmitValue(self) {
-            if (checkQty($("#BAQty")) == false) {
-                return false;
-            }
-
             document.getElementById("goPage").value = self;
             return true;
         }
