--- a/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab1_Layout.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab1_Layout.cshtml
@@ -1,19 +1,17 @@
 ﻿@model DatabaseObject.ViewModel.FinalInspection.QueryReport
 <style type="text/css">
-    .checkboxlabel {
+    .generalClass .checkboxlabel {
         font-size: 3vh;
         font-weight: 900;
     }
-    .generalClass tr td:nth-child(2) {
-        width: 50%;
-        text-align: center;
+    .generalClass tr td {
         vertical-align: middle;
     }
 </style>
 
 <table class="generalClass al-m" style="transform: translate(-50%, 0%);width: 48%;">
     <tr>
-        <td>
+        <td style="width:20%">
             @Html.CheckBoxFor(o => o.FinalInspection.FabricApprovalDoc, new { @disabled = "disabled", @class = "checkboxInput" })
         </td>
         <td>
