--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/CheckList.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/CheckList.cshtml
@@ -148,7 +148,7 @@
         }
 
         function checkSubmitValue(self) {
-            document.getElementById("page").value = self;
+            document.getElementById("goPage").value = self;
             return true;
         }
     </script>
