--- a/Quality/Quality/Areas/FinalInspection/Views/Query/Detail.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/Detail.cshtml
@@ -5,20 +5,34 @@
 @model DatabaseObject.ViewModel.FinalInspection.QueryReport
 
 @section FinalInspection_head{
+    <link href="~/ThirdParty/plugins/DataTables/datatables.min.css" rel="stylesheet" />
+    <link href="~/ThirdParty/SciCustom/css/TableStyle.css" rel="stylesheet" />
+    <link href="~/ThirdParty/plugins/sweetalert2/sweetalert2.min.css" rel="stylesheet" />
+    <script src="~/ThirdParty/plugins/DataTables/datatables.min.js"></script>
+    <link href="~/Areas/FinalInspection/CSS/FinalInspection.css" rel="stylesheet" />
+
     <style type="text/css">
         .whiteBackgrond div {
             padding-bottom: 0.5em;
         }
 
-        #tab-Change {
-            width: 100%;            
+        .valueColor {
+            color: #0000FF;
         }
 
-        #tab-Change > ul {
-            display: block;
-            margin: 0;
-            list-style: none;
+        tr.row-name {
+            color: black;
         }
+
+        #tab-Change {
+            width: 100%;
+        }
+
+            #tab-Change > ul {
+                display: block;
+                margin: 0;
+                list-style: none;
+            }
 
         .tab-title {
             list-style: none;
@@ -37,20 +51,19 @@
             box-sizing: border-box;
         }
 
-        #tab-Change > ul > li a {
-            color: #000;
-            text-decoration: none;
-        }
+            #tab-Change > ul > li a {
+                color: #000;
+                text-decoration: none;
+            }
 
-        #tab-Change > ul > li.active {
-            border-bottom: 1px solid #fff;
-            background: #fff;
-        }
+            #tab-Change > ul > li.active {
+                background: #fff;
+            }
 
         #tab-Change > .tab-inner {
-            padding:10px;
+            padding: 10px;
             color: #000;
-            border: 1px black solid;
+            border: 1px #BCBCBC solid;
             height: 50vh;
             overflow: scroll;
             overflow-x: hidden;
@@ -64,7 +77,7 @@
     <div style="padding:1em">
         <div>
             <h1 style="font-size:2em">Inspection Report</h1>
-            <button class="site-btn btn-blue" style="position:absolute;top:2em;right:0">Download</button>
+            <button class="site-btn btn-blue" style="position:absolute;top:1em;right:0">Download</button>
         </div>
         <div style="display:inline-block;border:1px solid gray;width:38%;height:15vh;padding-left:5px">
             <div><h1 style="font-size:1.5em">PO information</h1></div>
@@ -72,56 +85,56 @@
                 <table>
                     <tr>
                         <td>PO#</td>
-                        <td style="width:10%">@Model.FinalInspection.POID</td>
+                        <td class="valueColor" style="width:10%">@Model.FinalInspection.POID</td>
                         <td>SP#</td>
-                        <td style="width:20%">@Model.SP</td>
+                        <td class="valueColor" style="width:20%">@Model.SP</td>
                         <td>Style</td>
-                        <td style="width:20%">@Model.SP</td>
+                        <td class="valueColor" style="width:20%">@Model.SP</td>
                         <td>Brand</td>
-                        <td style="width:10%">@Model.BrandID</td>
+                        <td class="valueColor" style="width:10%">@Model.BrandID</td>
                     </tr>
                     <tr>
                         <td>Factory</td>
-                        <td>@Model.FinalInspection.FactoryID</td>
+                        <td class="valueColor">@Model.FinalInspection.FactoryID</td>
                         <td colspan="2">Total SP# Qty</td>
-                        <td>@Model.TotalSPQty</td>
+                        <td class="valueColor">@Model.TotalSPQty</td>
                         <td colspan="3"></td>
                     </tr>
                 </table>
             </div>
         </div>
         <div style="display:inline-block;border:1px solid gray;width:58%;height:15vh;padding-left:5px">
-            <div><h1 style="font-size:1.5em">Inspection Detail</h1></div>
+            <div><h1 style="font-size:1.5em">Inspection Setting</h1></div>
             <div>
                 <table>
                     <tr>
                         <td>Inspection Stage</td>
-                        <td>@Model.FinalInspection.InspectionStage</td>
+                        <td class="valueColor">@Model.FinalInspection.InspectionStage</td>
                         <td>Carton</td>
-                        <td colspan="2">@Model.Carton</td>
+                        <td colspan="2" class="valueColor">@Model.Carton</td>
                         <td colspan="2"></td>
                     </tr>
                     <tr>
                         <td>Audit Date</td>
-                        <td>@Convert.ToDateTime(Model.FinalInspection.AuditDate).ToString("yyyy/MM/dd")</td>
+                        <td class="valueColor">@Convert.ToDateTime(Model.FinalInspection.AuditDate).ToString("yyyy/MM/dd")</td>
                         <td>Available Qty</td>
-                        <td>@Model.AvailableQty</td>
+                        <td class="valueColor">@Model.AvailableQty</td>
                         <td colspan="4"></td>
                     </tr>
                     <tr>
                         <td>AQL Plan</td>
-                        <td>@Model.AQLPlan</td>
+                        <td class="valueColor">@Model.AQLPlan</td>
                         <td>Sample Plan Qty</td>
-                        <td>@Model.FinalInspection.SampleSize</td>
+                        <td class="valueColor">@Model.FinalInspection.SampleSize</td>
                         <td>Accepted</td>
-                        <td>@Model.FinalInspection.AcceptQty</td>
+                        <td class="valueColor">@Model.FinalInspection.AcceptQty</td>
                         <td>Rejected</td>
-                        <td>@Model.FinalInspection.RejectQty</td>
+                        <td class="valueColor">@Model.FinalInspection.RejectQty</td>
                     </tr>
                 </table>
             </div>
         </div>
-        <div><h1 style="font-size:2em">Inspection Detail</h1></div>
+        <div style="margin:0.5em"><h1 style="font-size:2em">Inspection Detail</h1></div>
         <div id="tab-Change">
             <ul class="tab-title">
                 <li link="#tab01">General</li>
@@ -160,11 +173,11 @@
             <table style="width:100%">
                 <tr>
                     <td style="width:12%">CFA</td>
-                    <td style="width:10%">@Model.FinalInspection.CFA</td>
-                    <td style="width:15%">Pass Qty(pcs)</td>
-                    <td style="width:5%">@Model.FinalInspection.PassQty</td>
+                    <td class="valueColor" style="width:10%">@Model.FinalInspection.CFA</td>
+                    <td class="valueColor" style="width:15%">Pass Qty(pcs)</td>
+                    <td class="valueColor" style="width:5%">@Model.FinalInspection.PassQty</td>
                     <td style="width:15%">Inpection Result</td>
-                    <td style="width:10%">@Model.FinalInspection.InspectionResult</td>
+                    <td class="valueColor" style="width:10%">@Model.FinalInspection.InspectionResult</td>
                     <td style="width:10%" rowspan="2"><button type="button" class="site-btn btn-red">Go On Inspect</button></td>
                     <td style="width:10%" rowspan="2"><button type="button" class="site-btn btn-blue">Send Mail</button></td>
                 </tr>
