--- a/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab2_Layout.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab2_Layout.cshtml
@@ -2,7 +2,6 @@
 <style type="text/css">
     .CheckListClass .checkboxlabel {
         font-size: 1.5em;
-        font-weight: bold;
     }
 
     .checkListClass tr td {
@@ -23,7 +22,7 @@
     <div style="display:inline-block;width:40%">
         <table class="checkListClass">
             <tr>
-                <td colspan="2" style="font-size: 2em">Fabric Artwork Check List</td>
+                <td colspan="2" style="font-size: 2em;font-weight:bold">Fabric Artwork Check List</td>
             </tr>
             <tr>
                 <td style="width:20%">
@@ -62,7 +61,7 @@
     <div style="display:inline-block;width:40%">
         <table class="checkListClass">
             <tr>
-                <td colspan="2" style="font-size: 2em">Packaging</td>
+                <td colspan="2" style="font-size: 2em;font-weight:bold">Packaging</td>
             </tr>
             <tr>
                 <td style="width:20%">
@@ -101,7 +100,7 @@
     <div>
         <table class="checkListClass">
             <tr>
-                <td colspan="2" style="font-size: 2em">Label</td>
+                <td colspan="2" style="font-size: 2em;font-weight:bold">Label</td>
             </tr>
             <tr>
                 <td style="width:20%">
