--- a/Quality/Quality/Areas/SampleRFT/Views/PicturesDummy/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/PicturesDummy/Index.cshtml
@@ -132,7 +132,7 @@
                                         @if (item.Front != null)
                                         {
                                             var base64 = Convert.ToBase64String(item.Front);
-                                            var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+                                            var imgSrc = String.Format("data:image/webp;base64,{0}", base64);
                                             <div class="zoom-gallery display-None">
                                                 <a href="@imgSrc" data-source="" title="Front" style="width:640px;height:480px;">
                                                     <img width="30" src="@imgSrc"/>
@@ -144,7 +144,7 @@
                                         @if (item.Side != null)
                                         {
                                             var base64 = Convert.ToBase64String(item.Side);
-                                            var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+                                            var imgSrc = String.Format("data:image/webp;base64,{0}", base64);
                                             <div class="zoom-gallery">
                                                 <a href="@imgSrc" data-source="" title="Side" style="width:640px;height:480px;">
                                                     <img style="width:20vw;" src="@imgSrc" />
@@ -156,7 +156,7 @@
                                         @if (item.Back != null)
                                         {
                                             var base64 = Convert.ToBase64String(item.Back);
-                                            var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+                                            var imgSrc = String.Format("data:image/webp;base64,{0}", base64);
                                             <div class="zoom-gallery">
                                                 <a href="@imgSrc" data-source="" title="Back" style="width:640px;height:480px;">
                                                     <img style="width:20vw;" src="@imgSrc" />
