--- a/Quality/Quality/Areas/SampleRFT/Views/CFTComments/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/CFTComments/Index.cshtml
@@ -1,7 +1,213 @@
 ﻿
+@using DatabaseObject.ViewModel
+
 @{
-    ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+@model CFTComments_ViewModel
+
+
+<link href="~/ThirdParty/plugins/DataTables/datatables.min.css" rel="stylesheet" />
+<link href="~/ThirdParty/SciCustom/css/TableStyle.css" rel="stylesheet" />
+<link href="~/ThirdParty/plugins/sweetalert2/sweetalert2.min.css" rel="stylesheet" />
+<script src="~/ThirdParty/plugins/DataTables/datatables.min.js"></script>
+
+<style type="text/css">
+    .dataTables_wrapper {
+        position: static;
+    }
+
+    h3, label, #myTable_info {
+        color: white
+    }
+
+    #myTable_previous, #myTable_next {
+        color: white !important;
+    }
+
+    select {
+        color: wheat
+    }
+
+    .btnmargin {
+        margin-left: 10px;
+        margin-top: 10px;
+    }
+
+    tfoot input {
+        width: 100%;
+        padding: 3px;
+        box-sizing: border-box;
+    }
+    td {
+        padding: 5px 5px 5px 5px;
+    }
+    .readonly{
+        background-color:lightgray;
+    }
+    .button {
+        width: 5vw;
+    }
+</style>
+<div class="main-content">
+
+    <header class="page-header">
+        <h3>
+            <i class=""></i><span>CFT Comments</span>
+        </h3>
+        <div class="breadcrumb">
+            <div>Home</div>
+            <div class="current">CFT Comments</div>
+        </div>
+    </header>
+
+
+    <div class="main-area">
+
+        <div class="content-scroll">
+            <div class="inner-scroll" style="float:left">
+
+                <div>
+                    @using (Html.BeginForm("Query", ViewContext.RouteData.GetRequiredString("Controller"), FormMethod.Post, new { @class = "", @name = "SearchFrom", @onsubmit = "", @id = "SearchFrom" }))
+                    {
+                        <div>
+                            <table>
+                                <tr>
+                                    <td>
+                                        @Html.RadioButtonFor(o=>o.QueryType, "Style", new { @ID= "TypeStyle" })
+                                    </td>
+                                    <td>
+                                        <label class="FindLab" for="TypeStyle">Style</label>
+                                    </td>
+                                    <td>
+                                        @Html.TextBoxFor(o => o.StyleID,  new { @value = Model.StyleID })
+                                    </td>
+                                    <td>
+                                        <label class="FindLab">Brand</label>
+                                    </td>
+                                    <td>
+                                        @Html.TextBoxFor(o => o.BrandID,  new { @value = Model.BrandID })
+                                    </td>
+                                    <td>
+                                        <label class="FindLab">Season</label>
+                                    </td>
+                                    <td>
+                                        @Html.TextBoxFor(o => o.SeasonID, new { @value = "Model.SeasonID" })
+                                    </td>
+                                    <td>
+                                        <input type="submit" class="button" name="name" id="btnFind" value="Find" />
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        @Html.RadioButtonFor(o => o.QueryType, "OrderID", new { @ID = "TypeSP",@value=Model.SampleStage })
+                                    </td>
+                                    <td>
+                                        <label class="FindLab" for="TypeSP">SP#</label>
+                                    </td>
+                                    <td>
+                                        @Html.TextBoxFor(o => o.OrderID, new { @value = Model.OrderID })
+                                    </td>
+                                    <td>
+                                        <label class="FindLab">Sample Stage</label>
+                                    </td>
+                                    <td colspan="3">
+                                        @Html.TextBoxFor(o => o.SampleStage, new {  @class = "readonly",@value=Model.SampleStage })
+                                    </td>
+                                    <td>
+                                        <input type="submit" class="button" name="name" id="btnExcel" value="To Excel" />
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                    }
+                </div>
+                <br />
+                <div>
+
+                    <table id="myTable" class="table table-striped display" style="text-align:center">
+                        <thead>
+                            <tr class="row-name">
+                                <th>SampleStage</th>
+                                <th>Comments Category</th>
+                                <th>Comments</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model.DataList)
+                            {
+                                <tr class="row-content">
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.SampleStage)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.CommentsCategory)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Comnments)
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+                <br />
+
+            </div>
+        </div>
+    </div>
+
+
+</div>
+
+
+
+<script type="text/javascript">
+
+    var msg = new MessagerAlert();
+
+    $(function () {
+
+
+        @Html.Raw(Model.ErrorMessage);
+
+        $('#myTable').DataTable({
+            "pageLength": 20,
+            initComplete: function () {
+            }
+        });
+
+
+        $("#OrderID").blur(function () {
+            $.ajax({
+                url: '@Url.Action("GetOrderinfo")',
+                data: { OrderID: $(this).val() },
+                type: 'POST',
+                dataType: "json",
+                async: false,
+                success: function (res) {
+
+                    if (res.Result) {
+                        // 表頭塞值
+                        $("#StyleID").val(res.StyleID);
+                        $("#SampleStage").val(res.SampleStage);
+                        $("#BrandID").val(res.BrandID);
+                        $("#SeasonID").val(res.SeasonID);
+
+                    }
+                    else {
+                        msg.WithErrorCheck(res.ErrorMessage, function () {
+                            location.reload();
+                        });
+                    }
+
+                }
+            });
+        });
+
+    });
+
+
+</script>
 
