--- a/Quality/Quality/Views/Shared/_Layout.cshtml
+++ b/Quality/Quality/Views/Shared/_Layout.cshtml
@@ -128,6 +128,9 @@
         .mfp-bottom-bar{
             display:none
         }
+        .swal2-title {
+            font-size: 10px;
+        }
     </style>
 </head>
 <body class="site-bg">
