--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Index.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Index.cshtml
@@ -45,7 +45,9 @@
         height: 54vh
     }
 
-
+    .dataTables_wrapper .dataTables_paginate .paginate_button {
+        color: black !important;
+    }
 
 
 </style>
