--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Measurement.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Measurement.cshtml
@@ -130,11 +130,12 @@
         </div>
 
         <input type="hidden" id="goPage" name="goPage">
-        <button id="btnBack" onclick="this.form.submitted=this.value;" type="submit" value="Back" style="right:7em;" class="button">Back</button>
-        <button d="btnNext" onclick="this.form.submitted=this.value;" type="submit" value="Next" style="right:0;" class="button">Next</button>
+       <div style="bottom:7em;"> <p >Inline, Stagger stage can skop this step</p></div>
+    <button id="btnBack" onclick="this.form.submitted=this.value;" type="submit" value="Back" style="right:7em;" class="button">Back</button>
+    <button d="btnNext" onclick="this.form.submitted=this.value;" type="submit" value="Next" style="right:0;" class="button">Next</button>
 
 
-    </div>
+</div>
 }
 
 
