--- a/Quality/Quality/Areas/FinalInspection/Views/Query/Index.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/Index.cshtml
@@ -50,6 +50,10 @@
         height: 54vh
     }
 
+    .dataTables_wrapper .dataTables_paginate .paginate_button {
+        color: black !important;
+    }
+
 </style>
 
 @model List<DatabaseObject.ViewModel.FinalInspection.QueryFinalInspection>
