--- a/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab5_Layout.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab5_Layout.cshtml
@@ -42,16 +42,16 @@
                     <tr id="row-name" class="row-name">
                         <th>Article</th>
                         <th>CTN#</th>
-                        <th>Detection Instrument</th>
+                        <th>Detection<br>Instrument</th>
                         <th>Fabrication</th>
-                        <th>Garment Moisture Standard</th>
-                        <th>Garment Moisture Top</th>
-                        <th>Garment Moisture Middle</th>
-                        <th>Garment Moisture Bottom</th>
-                        <th>Carton Moisture Standard</th>
-                        <th>Carton Moisture Inside</th>
-                        <th>Carton Moisture Outside</th>
-                        <th>GResult</th>
+                        <th>Garment<br>Moisture<br>Standard</th>
+                        <th>Garment<br>Moisture<br>Top</th>
+                        <th>Garment<br>Moisture<br>Middle</th>
+                        <th>Garment<br>Moisture<br>Bottom</th>
+                        <th>Carton<br>Moisture<br>Standard</th>
+                        <th>Carton<br>Moisture<br>Inside</th>
+                        <th>Carton<br>Moisture<br>Outside</th>
+                        <th>Result</th>
                         <th>Action</th>
                         <th>Remark</th>
                     </tr>
@@ -170,11 +170,9 @@
 
         $('#Tab5Table').DataTable({
 
-            "pageLength": 10,
             "filter": false,
-            "paging": true,
-            "scrollY": "49vh",
-            "scrollCollapse": true,
+            "paging": false,
+
             "scrollX": true
 
         });
